Slider little more responsive

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -23,6 +23,17 @@
   );
 }
 
+.inner-carousel {
+  display: flex;
+  background: lightblue;
+}
+
+.carousel {
+  cursor: grab;
+  overflow: hidden;
+  background: lightsalmon;
+}
+
 .gradient,
 .active {
   background: linear-gradient(
