--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -8,7 +8,7 @@
 }
 
 .modal_wrapper {
-  @apply flex justify-start items-center flex-col h-[75%] w-3/4 bottom-0 bg-white rounded-3xl  overflow-hidden;
+  @apply flex justify-start items-center flex-col h-[75%] w-3/4 bottom-0 bg-white rounded-3xl;
 }
 
 /* .wrapper {
